fixed bugs with opus and sonnet

--- a/robin_demo.ipynb
+++ b/robin_demo.ipynb
@@ -33,7 +33,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config = RobinConfiguration(disease_name=\"dry age-related macular degeneration\")\n",
+    "config = RobinConfiguration(\n",
+    "    disease_name=\"dry age-related macular degeneration\",\n",
+    "    llm_name=\"o4-mini\",  # choose between o3-mini, o4-mini, claude-sonnet-4, claude-opus-4, gemini-2.5-flash\n",
+    "    llm_formatter_name=\"claude-opus-4\",\n",
+    ")\n",
     "\n",
     "logger = logging.getLogger(\"robin\")\n",
     "logger.setLevel(logging.INFO)"
